--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,28 @@
-#root {
-  width: clamp(375px, 100vw, 1320px);
-  margin: 0 auto;
-  text-align: center;
-  border: 10px solid greenyellow;
+.headerTop {
+  color: var(--gray300);
+  background-color: #333333;
+  width: 100%;
+  height: 2.625em;
 }
 
-*{
-  box-sizing: border-box;
+.headerTopContainer {
+  width: clamp(375px, 100vw, 1320px);
+  height: 100%;
+  margin: 0 auto;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  font-size: 0.75rem;
+  font-weight: lighter;
+  letter-spacing: 0.025em;
+}
+
+.headerTopLocation {
+
+}
+
+.headerTopSign {
+
 }
