--- a/src/App.module.css
+++ b/src/App.module.css
@@ -109,9 +109,27 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  border-top: 1px solid #e6e6e6;
+}
+
+.headerBottomNav {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+
+  display: flex;
+  gap: 2em;
+}
+
+.headerBottomNav li {
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  gap: 2px;
 }
 
 .headerBottomPhone {
   font-family: "Poppins Bold", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 0.875rem;
 }
