BUILD Footer UI

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -25,10 +25,40 @@
 }
 
 .footerBottom {
-  margin: 0;
   color: white;
   background-color: #002603;
 
   display: grid;
   grid-template-columns: 1fr 1320px 1fr;
+  grid-template-areas: 
+    "left  mid   right"
+    "left bottom right";
+}
+
+.footerBottomLeft {
+  grid-area: left;
+
+  height: 31.25rem;
+  background-image: url("/img/bg-footer-left.png");
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
+
+.footerBottomMid {
+  grid-area: mid;
+
+  height: 25.9375rem;
+}
+
+.footerBottomRight {
+  grid-area: right;
+
+  height: 31.25rem;
+  background-image: url("/img/bg-footer-right.png");
+  background-repeat: no-repeat;
+  background-position: bottom left;
+}
+
+.footerBottomBottom {
+  grid-area: bottom;
 }
