--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -49,3 +49,13 @@
   font-family: "Poppins Bold", Helvetica, Arial, sans-serif;
   font-size: 0.875rem;
 }
+
+.headerBottomPhone a {
+  color: #1A1A1A;
+  text-decoration: none;
+}
+
+.headerBottomPhone a:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 2px ;
+}
