--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,11 +1,11 @@
-.headerTop {
+.top {
   color: var(--gray300);
   background-color: #333333;
   width: 100%;
   height: 2.625em;
 }
 
-.headerTopContainer {
+.topContainer {
   width: clamp(375px, 100vw, 1320px);
   height: 100%;
   margin: 0 auto;
@@ -18,7 +18,7 @@
   font-weight: lighter;
 }
 
-.headerMid {
+.middle {
   width: clamp(375px, 100vw, 1320px);
   height: 5.8125em;
   margin: 0 auto;
@@ -28,12 +28,12 @@
   align-items: center;
 }
 
-.headerMid h1 {
+.middleLogo {
   margin: 0;
   padding: 0;
 }
 
-.headerBottom {
+.bottom {
   width: clamp(375px, 100vw, 1320px);
   height: 3.75em;
   margin: 0 auto;
@@ -45,17 +45,17 @@
   border-top: 1px solid #e6e6e6;
 }
 
-.headerBottomPhone {
+.bottomPhone {
   font-family: "Poppins Bold", Helvetica, Arial, sans-serif;
   font-size: 0.875rem;
 }
 
-.headerBottomPhone a {
-  color: #1A1A1A;
+.bottomPhone a {
+  color: #1a1a1a;
   text-decoration: none;
 }
 
-.headerBottomPhone a:hover {
+.bottomPhone a:hover {
   text-decoration: underline;
-  text-decoration-thickness: 2px ;
+  text-decoration-thickness: 2px;
 }
