--- a/src/components/MainNav/MainNav.module.css
+++ b/src/components/MainNav/MainNav.module.css
@@ -1,4 +1,4 @@
-.headerBottomNav {
+.nav {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -7,7 +7,7 @@
   gap: 2em;
 }
 
-.headerBottomNav li {
+.navItem {
   font-size: 14px;
   display: flex;
   align-items: center;
