--- a/src/components/ShoppingCart/ShoppingCart.module.css
+++ b/src/components/ShoppingCart/ShoppingCart.module.css
@@ -1,4 +1,4 @@
-.headerCart {
+.cart {
   display: flex;
   gap: 0.3125em;
   align-items: center;
@@ -8,22 +8,22 @@
   justify-self: end;
 }
 
-.headerCartIcon {
+.cartIcon {
   position: relative;
 }
 
-.headerCartPrice {
+.cartPrice {
   font-size: 14px;
   font-family: "Poppins Bold", Helvetica, Arial, sans-serif;
 }
 
-.headerCartQty {
-  background-color: #2C742F;
+.cartQty {
+  background-color: #2c742f;
   border-radius: 50%;
   height: 1.125em;
   width: 1.125em;
   padding-bottom: 14px;
-  
+
   position: absolute;
   right: 0;
   top: 2px;
