--- a/src/components/MainHighlights/MainHighlight.module.css
+++ b/src/components/MainHighlights/MainHighlight.module.css
@@ -6,14 +6,15 @@
   border-color: #e5e5e5;
   border-style: solid;
 
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #999999;
+  background-color: white;
 }
 
 .container h3 {
-  font-size: 18px;
+  font-size: 1.125rem;
   color: #1a1a1a;
-  margin-bottom: 6px;
+  margin-bottom: 0.375rem;
 }
 
 .container:hover,
@@ -34,8 +35,8 @@
 }
 
 .iconContainer {
-  width: 70px;
-  height: 70px;
+  width: 4.375rem;
+  height: 4.375rem;
   border: 1px solid #e5e5e5;
   border-radius: 50%;
 
