--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 82.5rem;
-  margin: 0 auto;
+  margin: 0 auto 5rem auto;
 
   display: flex;
   flex-direction: column;
@@ -23,6 +23,7 @@
 .productsAll {
   background-color: rgb(218, 229, 218);
   border: 1px solid rgb(218, 229, 218);
+
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1px;
