BUILD Home Featured component UI

--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -16,3 +16,8 @@ a {
   display: flex;
   flex-direction: column;
 }
+
+.price {
+  font-family: "Poppins Bold", Helvetica, Arial, sans-serif;
+  color: #1a1a1a;
+}
