--- a/src/components/ProductCard/ProductCardSm.module.css
+++ b/src/components/ProductCard/ProductCardSm.module.css
@@ -1,7 +1,7 @@
 .container {
-  width: 262px;
+  width: 264px;
   background-color: white;
-  border: 1px solid white;
+  border: 1px solid rgb(229, 229, 229);
 
   display: flex;
   flex-direction: column;
@@ -15,11 +15,6 @@
 .name {
   color: #4d4d4d;
   font-size: 14px;
-}
-
-.price {
-  font-family: "Poppins Bold", Helvetica, Arial, sans-serif;
-  color: #1a1a1a;
 }
 
 .filled {
