--- a/src/components/ProductCard/ProductCardLg.module.css
+++ b/src/components/ProductCard/ProductCardLg.module.css
@@ -1,7 +1,7 @@
 .container {
-  width: 328px;
+  width: 330px;
   background-color: white;
-  border: 1px solid white;
+  border: 1px solid rgb(229, 229, 229);
 
   display: flex;
   flex-direction: column;
@@ -9,16 +9,11 @@
 }
 
 .img {
-  height: 310px;
+  height: 308px;
 }
 
 .name {
   color: #4d4d4d;
-}
-
-.price {
-  font-family: "Poppins Bold", Helvetica, Arial, sans-serif;
-  color: #1a1a1a;
 }
 
 .filled {
