--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -4,7 +4,7 @@ a {
 
 .text {
   width: 100%;
-  padding: 0 20px 20px;
+  padding: 0 1.25rem 1.25rem;
 
   display: flex;
   justify-content: space-between;
