--- a/src/components/ProductCard/ProductCardMd.module.css
+++ b/src/components/ProductCard/ProductCardMd.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 312px;
+  width: 19.5rem;
   background-color: white;
   border: 1px solid rgb(229, 229, 229);
 
@@ -9,20 +9,20 @@
 }
 
 .img {
-  height: 302px;
+  height: 18.875rem;
 }
 
 .name {
   color: #4d4d4d;
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 
 .filled {
   color: #ff8a00;
-  height: 12px;
+  height: 0.75rem;
 }
 
 .empty {
   color: #cccccc;
-  height: 12px;
+  height: 0.75rem;
 }
