BUILD Home MainBlog component UI

--- a/src/components/MainVideo/MainVideo.module.css
+++ b/src/components/MainVideo/MainVideo.module.css
@@ -1,15 +1,23 @@
+.bg {
+  padding: 80px 0;
+  background-color: #edf2ee;
+}
+
 .container {
   max-width: 82rem;
   margin: 0 auto;
+
   position: relative;
 
   text-align: center;
 }
 
 .title {
+  width: 60%;
+
   color: white;
   font-family: "Poppins Bold", Helvetica, Arial, sans-serif;
-  font-size: 36px;
+  font-size: 48px;
 
   position: absolute;
   top: 50%;
@@ -18,11 +26,12 @@
   z-index: 1;
 }
 
-.bg {
+.videoBg {
   width: 100%;
   height: 99%;
 
   background-color: rgba(0, 46, 3, 0.6);
+  border-radius: 1.25rem;
 
   position: absolute;
   top: 0;
