--- a/src/components/MainBlog/MainBlog.module.css
+++ b/src/components/MainBlog/MainBlog.module.css
@@ -1,10 +1,10 @@
 .container {
   max-width: 82.5rem;
-  margin: 90px auto;
+  margin: 5.625rem auto;
 
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 24px;
+  column-gap: 1.5rem;
 }
 
 .title {
