--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -3,10 +3,10 @@
   background-color: #00b207;
   font-family: "Poppins", Helvetica, Arial, sans-serif;
 
-  padding: 10px 25px;
+  padding: 0.625rem 1.5625rem;
 
   border: none;
-  border-radius: 25px;
+  border-radius: 1.5625rem;
 }
 
 .align {
