--- a/src/components/Highlights/Highlights.module.css
+++ b/src/components/Highlights/Highlights.module.css
@@ -5,7 +5,7 @@
 .container {
   max-width: 82.5rem;
   margin: 0 auto;
-  padding: 108px 0;
+  padding: 6.75rem 0;
 
   display: flex;
   justify-content: space-between;
