--- a/src/components/MainVideo/MainVideo.module.css
+++ b/src/components/MainVideo/MainVideo.module.css
@@ -1,5 +1,5 @@
 .bg {
-  padding: 80px 0;
+  padding: 5rem 0;
   background-color: #edf2ee;
 }
 
@@ -17,7 +17,7 @@
 
   color: white;
   font-family: "Poppins Bold", Helvetica, Arial, sans-serif;
-  font-size: 48px;
+  font-size: 3px;
 
   position: absolute;
   top: 50%;
