--- a/src/components/Testimonials/Testimonials.module.css
+++ b/src/components/Testimonials/Testimonials.module.css
@@ -1,10 +1,10 @@
 .container {
   max-width: 82.5rem;
-  margin: 90px auto;
+  margin: 5.625rem auto;
 
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 24px;
+  column-gap: 1.5rem;
 }
 
 .title {
@@ -18,9 +18,9 @@
 }
 
 .info {
-  width: 424px;
-  height: 252px;
-  padding: 32px;
+  width: 26.5rem;
+  height: 15.75rem;
+  padding: 2rem;
   background-image: url("/img/testimonials-bg.png");
 
   display: flex;
