--- a/src/components/MainVideo/MainVideo.module.css
+++ b/src/components/MainVideo/MainVideo.module.css
@@ -17,7 +17,7 @@
 
   color: white;
   font-family: "Poppins Bold", Helvetica, Arial, sans-serif;
-  font-size: 3px;
+  font-size: 3rem;
 
   position: absolute;
   top: 50%;
