--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -24,7 +24,7 @@
   margin: 0 auto;
 
   display: grid;
-  grid-template-columns: 3fr 2fr 3fr;
+  grid-template-columns: 1fr 2fr 1fr;
   align-items: center;
 }
 
@@ -34,7 +34,7 @@
 }
 
 .bottom {
-  width: clamp(23.4375rem, 100vw, 82.5rem);
+  max-width: 82.5rem;
   height: 3.75em;
   margin: 0 auto;
 
