--- a/src/components/MainNav/MainNav.module.css
+++ b/src/components/MainNav/MainNav.module.css
@@ -3,13 +3,46 @@
   padding: 0;
   list-style-type: none;
 
+  position: relative;
+
   display: flex;
   gap: 2em;
 }
 
 .navItem {
   font-size: 0.875rem;
+}
+
+.navItem a {
+  color: #666666;
+
   display: flex;
   align-items: center;
   gap: 2px;
+}
+
+.navItem a:hover {
+  color: #00b207;
+}
+
+.shop {
+  background-color: white;
+  border: 1px solid #e5e5e5;
+  list-style-type: none;
+
+  margin-top: 10px;
+  margin-left: -5px;
+  padding: 0;
+  position: absolute;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.shopOff {
+  display: none;
+}
+
+.shop a {
+  color: #666666;
 }
