BUILD IntroMenu initial functionality

--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -20,7 +20,8 @@
   width: 100%;
 }
 
-.productsAll {
+.productsAll,
+.productsVegetables {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
