--- a/src/components/MainBlog/MainArticle.module.css
+++ b/src/components/MainBlog/MainArticle.module.css
@@ -7,6 +7,12 @@
   border-radius: 0.5rem;
 }
 
+.img {
+  width: 100%;
+  height: 276px;
+  object-fit: cover;
+}
+
 .title {
   color: #002603;
   font-family: "Poppins Bold", Helvetica, Arial, sans-serif;
