--- a/src/pages/Shop/Shop.module.css
+++ b/src/pages/Shop/Shop.module.css
@@ -1,7 +1,6 @@
 .container {
   max-width: 82.5rem;
-  margin: 0 auto;
-  border: 1px solid greenyellow;
+  margin: 2rem auto;
 
   display: flex;
   gap: 1.5rem;
@@ -9,15 +8,81 @@
 
 .sidebar {
   width: 19.5rem;
-
   border: 1px solid blue;
 }
 
-.products {
+.categories {
   width: 100%;
+  border: 1px solid greenyellow;
 
+  display: flex;
+  flex-direction: column;
+}
+
+.category {
+  display: flex;
+  align-items: center;
+}
+
+.category input {
+  margin-bottom: 3px;
+}
+
+.shop {
+  width: 100%;
+}
+
+.sort {
+  margin-bottom: 24px;
+
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.sortBy {
+  padding: 5px;
+  border: 1px solid #b3b3b3;
+
+  font-family: "Poppins", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+}
+
+.products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1.5rem;
-  border: 1px solid red;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.list {
+  padding: 0;
+  list-style-type: none;
+
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.listItem {
+  width: 35px;
+  height: 35px;
+  border: 1px solid #b3b3b3;
+  border-radius: 50%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.listItem:hover {
+  border: none;
+  color: white;
+  background-color: #00b207;
+  cursor: pointer;
 }
