--- a/src/pages/Shop/Shop.module.css
+++ b/src/pages/Shop/Shop.module.css
@@ -12,10 +12,15 @@
 
 .filter {
   width: 100%;
-  margin-top: 30px;
+  padding: 20px 0 30px 0;
+  border-bottom: 1px solid #cccccc;
 
   display: flex;
   flex-direction: column;
+}
+
+.filter:first-of-type {
+  padding-top: 0;
 }
 
 .filterTitleContainer {
