--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -4,10 +4,20 @@
   font-family: "Poppins", Helvetica, Arial, sans-serif;
 
   padding: 0.625rem 1.5625rem;
-  border: none;
+  border: 1px solid white;
   border-radius: 1.5625rem;
 
   cursor: pointer;
+}
+
+.button:hover {
+  background-color: #2c742f;
+}
+
+.button:active {
+  border: 1px solid #00b207;
+  background-color: white;
+  color: #00b207;
 }
 
 .align {
